--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Kia ora ao marama (Ave Munde)
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>An Auspicious Beginning, possibly</title>
+  </head>
+  <body>
+    <h1>Kia ora ao marama (Ave Munde)</h1>
+    <h2> I mean, this seems like an adequate start.
+      This tiny website, like this puppy, has definite potential. 
+    </h2>
+
+    <img src=https://i.imgur.com/djFPYYM.jpg" />
+
+    
+
+    <h2>
+      <a href="./secondpage.html">Can this upward trajectory continue?</a>
+      </h2>
+  </body>
+</html>
+
+
+
+
