Added link to blog to second page

--- a/secondpage.html
+++ b/secondpage.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h3>After all, hubris is definitely a thing.</h3>
-    <a href="./index.html">In fact, after a promising start, it seems the only place to go is in circles.</a>
+    <p><a href="./index.html">In fact, after a promising start, it seemed the only place to go was in circles.</a></p>
+    <p><a href="./blog/c1-reflection-blog.html">But now there is blog.</a></p>
   </body>
 </html>
