Added time and habits blog, edited other pages to link to blog posts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     <img src=https://i.imgur.com/djFPYYM.jpg" />
 
-    
+    <h3>Blog Entries</h3>
+
+    <p><a href="./blog/c1-reflection-blog.html">Cultural Blog: Initial Reflections</a></p>
+    <p><a href="./blog/c1-time-and-habits-blog.html">Cultural Blog: Time and Habits</a></p>
 
     <h2>
       <a href="./secondpage.html">Can this upward trajectory continue?</a>
