--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       
     <p>It seems like an adequate start. Like this puppy, it has definite potential. </p>
     
-    <img src=https://i.imgur.com/djFPYYM.jpg" />
+    <img src="https://i.imgur.com/djFPYYM.jpg" alt="An adorable puppy."/>
 
     <h3>Blog Entries:</h3>
 
     <p><a href="./blog/c1-reflection-blog.html">Cultural Blog: Initial Reflections</a></p>
     <p><a href="./blog/c1-time-and-habits-blog.html">Cultural Blog: Time and Habits</a></p>
-
+    <p><a href="./blog/t2-html-css-dom-p1.html">Technical Blog: HTML, CSS, and the DOM</a></p>
     <h2>
       <a href="./secondpage.html">Can this upward trajectory continue?</a>
       </h2>
