Wrote blog t2, linked to homepage.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 
     <p><a href="./blog/c1-reflection-blog.html">Cultural Blog: Initial Reflections</a></p>
     <p><a href="./blog/c1-time-and-habits-blog.html">Cultural Blog: Time and Habits</a></p>
-    <p><a href="./blog/t2-html-css-dom-p1.html">Technical Blog: HTML, CSS, and the DOM</a></p>
+    <p><a href="./blog/t2-html-css-dom-p1.html">Technical Blog: HTML, CSS, and the DOM, part 1</a></p>
+    <p><a href="./blog/t2-html-css-dom-p2.html">Technical Blog: HTML, CSS, and the DOM, part 2</a></p>
     <h2>
       <a href="./secondpage.html">Can this upward trajectory continue?</a>
       </h2>
     <footer>
       <div class="foot"><a href="https://github.com/CliffRobinson">GitHub</a></div>
-      <div class="foot"><a href="www.linkedin.com/in/clifford-robinson-39b24621">LinkedIn</a></div>
+      <div class="foot"><a href="https://www.linkedin.com/in/clifford-robinson-39b24621">LinkedIn</a></div>
       <div class="foot">Email:<a href="mailto:clifford.f.robinson@gmail.com">Clifford.F.Robinson@gmail.com</a></div>
       <div class="foot">© Clifford Robinson, 2018</div>
     </footer>
