--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <p><a href="./blog/c1-time-and-habits-blog.html">Cultural Blog: Time and Habits</a></p>
     <p><a href="./blog/t2-html-css-dom-p1.html">Technical Blog: HTML, CSS, and the DOM, part 1</a></p>
     <p><a href="./blog/t2-html-css-dom-p2.html">Technical Blog: HTML, CSS, and the DOM, part 2</a></p>
+    <p><a href="./blog/c2-emotional-intelligence.html">Cultural Blog: Emotional Intelligence</a></p>
     <h2>
       <a href="./secondpage.html">Can this upward trajectory continue?</a>
       </h2>
