created top level structure of html index page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
-    
-  </head>
-  <body>
+<head>
+  <title></title>
+  <meta charset="UTF-8">
   
-  </body>
+</head>
+<body>
+  <div class="container">
+    <!-- Welcome to container town. This is where everything in the website lives -->
+    <div class="row"> 
+      First Row: Header Image
+    </div>
+    <div class="row"> 
+      Second Row: a stack of links
+    </div>
+    <div class="row">
+      Third row: First image+text para
+    </div>
+    <div class="row">
+      Forth row: second image+text para
+    </div>
+    <div class="row">
+        Fifth row: third image+text para
+    </div>
+    <div class="row">
+      Sixth row: image+text para
+    </div>
+    <div class="row">
+      Final row: footer
+    </div>
+    
+    <!-- End of container -->
+  </div>
+</body>
 </html>
