Added placeholder header img, columns for buttons

--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Cliff Robinson</title>
   <meta charset="UTF-8">
-  
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+  <link rel="stylesheet" type="text/css" href="./styles/main.css"
 </head>
 <body>
   <div class="container">
     <!-- Welcome to container town. This is where everything in the website lives -->
     <div class="row"> 
-      First Row: Header Image
+      <div class="twelve.columns">
+          First Row: Header Image: Let's eventually overlay this text on the image.
+          <img class="u-full-width"
+          src="http://placekitten.com/g/960/320" alt="Header image goes here">
+      </div>
+      
     </div>
     <div class="row"> 
-      Second Row: a stack of links
+      <div class="four columns">
+        Linky link 1
+      </div>
+
+      <div class="four columns">
+        Linky link 1
+      </div>
+
+       <div class="four columns">
+        Linky link 1
+      </div>
     </div>
     <div class="row">
       Third row: First image+text para
