changed all links to buttons

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
       
     </div>
     <div class="row"> 
-      <div class="four columns button">
-        <a href="./blog/">Blog</a>
+        <div class="four columns">
+        <a class="button" href="./blog/">Blog </a>
       </div>
 
       <div class="four columns">
-        Linky link 1
+          <a class="button" href="#">EDA Projects</a>
       </div>
 
        <div class="four columns">
-        Linky link 1
+          <a class="button" href="#">Personal Projects</a>
       </div>
     </div>
     <div class="row">
