altered footer to be responsive

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
         </div>  
     </div>
 
-    <footer>
+    <footer class="row">
       <!-- Would like to replace text with entypo icons at some point -->
-        <div class="foot"><a href="https://github.com/CliffRobinson">GitHub</a></div>
-        <div class="foot"><a href="www.linkedin.com/in/clifford-robinson-39b24621">LinkedIn</a></div>
-        <div class="foot">Email:<a href="mailto:clifford.f.robinson@gmail.com">Clifford.F.Robinson@gmail.com</a></div>
-        <div class="foot">© Clifford Robinson, 2018</div>
+        <div class="foot two columns"><a href="https://github.com/CliffRobinson">GitHub</a></div>
+        <div class="foot two columns"><a href="www.linkedin.com/in/clifford-robinson-39b24621">LinkedIn</a></div>
+        <div class="foot four columns">Email:<a href="mailto:clifford.f.robinson@gmail.com">Clifford.F.Robinson@gmail.com</a></div>
+        <div class="foot two columns">© Clifford Robinson, 2018</div>
       </footer>
     
     <!-- End of container -->
