--- a/index.html
+++ b/index.html
@@ -42,40 +42,42 @@
     <div class="row">
       <div class="illumination">
           <div class="illumination-inset u-pull-left">
-            <img class="u-full-width" src="./images/SCourtinside-squared.jpg" alt="Illumination? Inline picture? I don't know design words">
+            <img class="u-full-width" src="./images/SCourtinside-squared.jpg" href="www.linkedin.com/in/clifford-robinson-39b24621" alt="Illumination: The NZ Supreme Court: taken from https://www.courtsofnz.govt.nz/judgments, I'll take it down if you ask, don't sue me.">
           </div>
           <p class="illumination-text">
-              Third row: First image+text para: It is told among the wise that the First War began before Arda was full-shaped, and ere yet there was any thing that grew or walked upon earth; and for long Melkor had the upper hand. But in the midst of the war a spirit of great strength and hardihood came to the aid of the Valar, hearing in the far heaven that there was battle in the Little Kingdom; and Arda was filled with the sound of his laughter. So came Tulkas the Strong, whose anger passes like a mighty wind, scattering cloud and darkness before it; and Melkor fled before his wrath and his laughter, and forsook Arda, and there was peace for a long age. And Tulkas remained and became one of the Valar of the Kingdom of Arda; but Melkor brooded in the outer darkness, and his hate was given to Tulkas for ever after.
+              Hi, I'm Cliff. I used to be <a href="www.linkedin.com/in/clifford-robinson-39b24621">a lawyer</a>, now I'm training to be a software developer. Here's where you can see what I'm working on.
           </p>
       </div>
     </div>
     <div class="row">
         <div class="illumination">
             <div class="illumination-inset u-pull-left">
-              <img class="u-full-width" src="./images/StockSnap_TG7JUL1ECL.jpg" alt="Illumination? Inline picture? I don't know design words">
+              <a href="./blog">
+                <img class="u-full-width" src="./images/StockSnap_TG7JUL1ECL.jpg" alt="Illumination: A dairy. Taken from https://stocksnap.io/photo/TG7JUL1ECL.">
+              </a>
             </div>
             <p class="illumination-text">
-                Forth row: Second image+text para: In that time the Valar brought order to the seas and the lands and the mountains, and Yavanna planted at last the seeds that she had long devised. And since, when the fires were subdued or buried beneath the primeval hills, there was need of light, Aulë at the prayer of Yavanna wrought two mighty lamps for the lighting of the Middle-earth which he had built amid the encircling seas. Then Varda filled the lamps and Manwë hallowed them, and the Valar set them upon high pillars, more lofty far than are any mountains of the later days. One lamp they raised near to the north of Middle-earth, and it was named Illuin; and the other was raised in the south, and it was named Ormal; and the light of the Lamps of the Valar flowed out over the Earth, so that all was lit as it were in a changeless day.
+              Part of my work includes writing a blog. You can find it <a href="./blog">here</a>.
             </p>
         </div>
     </div>
     <div class="row">
         <div class="illumination">
             <div class="illumination-inset u-pull-left">
-              <img class="u-full-width" src="./images/EDA-Logo.jpg" alt="Illumination? Inline picture? I don't know design words">
+              <img class="u-full-width" src="./images/EDA-Logo.jpg" alt="EDA Logo, taken from https://github.com/dev-academy-programme. I'll take it down if you ask, don't sue me.">
             </div>
             <p class="illumination-text">
-                Fifth row: third image+text para: Then the seeds that Yavanna had sown began swiftly to sprout and to burgeon, and there arose a multitude of growing things great and small, mosses and grasses and great ferns, and trees whose tops were crowned with cloud as they were living mountains, but whose feet were wrapped in a green twilight. And beasts came forth and dwelt in the grassy plains, or in the rivers and the lakes, or walked in the shadows of the woods. As yet no flower had bloomed nor any bird had sung, for these things waited still their time in the bosom of Yavanna; but wealth there was of her imagining, and nowhere more rich than in the midmost parts of the Earth, where the light of both the Lamps met and blended. And there upon the Isle of Almaren in the Great Lake was the first dwelling of the Valar when all things were young, and new-made green was yet a marvel in the eyes of the makers; and they were long content.
+                Pretty soon I'll be posting my assignments from <a href="https://devacademy.co.nz/">Enspiral DevAcademy</a>, the school I'm learning development from. When I do, you'll find them here. 
             </p>
         </div>      
     </div>
     <div class="row">
         <div class="illumination">
             <div class="illumination-inset u-pull-left">
-              <img class="u-full-width" src="./images/countdown-clock-squared.jpg" alt="Illumination? Inline picture? I don't know design words">
+              <img class="u-full-width" src="./images/countdown-clock-squared.jpg" alt="Illumination: thumbnail from https://www.youtube.com/watch?v=cGc6-Od28Pg. I'll take it down if you ask, don't sue me.">
             </div>
             <p class="illumination-text">
-                Sixth row: forth image+text para: Now it came to pass that while the Valar rested from their labours, and watched the growth and unfolding of the things that they had devised and begun, Manwë ordained a great feast; and the Valar and an their host came at his bidding. But Aulë and Tulkas were weary; for the craft of Aulë and the strength of Tulkas had been at the service of an without ceasing fax the days of their labour. And Melkor knew of an that was done, for even then he had secret friends and spies among the Maiar whom he had converted to his cause; and far off in the darkness he was filled with hatred, being jealous of the work of his peers, whom he desired to make subject to himself. Therefore he gathered to himself spirits out of the halls of Eä that he had perverted to his service, and he deemed himself strong. And seeing now his time he drew near again to Arda, and looked down upon it, and the beauty of the Earth in its Spring filled him the more with hate.
+                I've also got some personal projects I've been working on, which are going to be posted here. 
             </p>
         </div>  
     </div>
