Put lists into blog index, put outlines back

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="centered" >
             <h1>Cliff Robinson</h1>
         </div> <!-- looks like to center the text it needs to be in its own div which we can place -->
-        <img class="u-full-width" src="./images/Wellington-Header-greyscale.jpg"  alt="Header image goes here"> <!-- http://placekitten.com/g/960/320 -->
+        <img class="u-full-width" src="./images/Wellington-Header-greyscale.jpg"  alt="A view of Wellington, (C) Cliff Robinson"> <!-- http://placekitten.com/g/960/320 -->
           
         
       </div>
