finalised blog index, linked stylesheet to latest blog

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
     <div class="row">
       <div class="illumination">
           <div class="illumination-inset u-pull-left">
-            <img class="u-full-width" src="./images/SCourtinside-squared.jpg" href="www.linkedin.com/in/clifford-robinson-39b24621" alt="Illumination: The NZ Supreme Court: taken from https://www.courtsofnz.govt.nz/judgments, I'll take it down if you ask, don't sue me.">
+            <a href="https://www.linkedin.com/in/clifford-robinson-39b24621">
+              <img class="u-full-width" src="./images/SCourtinside-squared.jpg"  alt="Illumination: The NZ Supreme Court: taken from https://www.courtsofnz.govt.nz/judgments, I'll take it down if you ask, don't sue me.">
+            </a>
           </div>
           <p class="illumination-text">
-              Hi, I'm Cliff. I used to be <a href="www.linkedin.com/in/clifford-robinson-39b24621">a lawyer</a>, now I'm training to be a software developer. Here's where you can see what I'm working on.
+              Hi, I'm Cliff. I used to be <a href="https://www.linkedin.com/in/clifford-robinson-39b24621">a lawyer</a>, now I'm training to be a software developer. Here's where you can see what I'm working on.
           </p>
       </div>
     </div>
@@ -85,8 +87,8 @@
     <footer class="row">
       <!-- Would like to replace text with entypo icons at some point -->
         <div class="foot two columns"><a href="https://github.com/CliffRobinson">GitHub</a></div>
-        <div class="foot two columns"><a href="www.linkedin.com/in/clifford-robinson-39b24621">LinkedIn</a></div>
-        <div class="foot four columns">Email:<a href="mailto:clifford.f.robinson@gmail.com">Clifford.F.Robinson@gmail.com</a></div>
+        <div class="foot two columns"><a href="https://www.linkedin.com/in/clifford-robinson-39b24621">LinkedIn</a></div>
+        <div class="foot four columns">Email: <a href="mailto:clifford.f.robinson@gmail.com">Clifford.F.Robinson@gmail.com</a></div>
         <div class="foot three columns">© Clifford Robinson, 2018</div>
       </footer>
     
