created font icon family, added to footer.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
   <link rel="stylesheet" type="text/css" href="./styles/main.css">
+  <link href="./styles/styles.css"  type="text/css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -97,12 +98,12 @@
 
 
     <footer class="row">
-      <!-- Would like to replace text with entypo icons at some point -->
-        <div class="foot two columns"><a href="https://github.com/CliffRobinson">GitHub</a></div>
-        <div class="foot two columns"><a href="https://www.linkedin.com/in/clifford-robinson-39b24621">LinkedIn</a></div>
-        <div class="foot four columns">Email: <a href="mailto:clifford.f.robinson@gmail.com">Clifford.F.Robinson@gmail.com</a></div>
-        <div class="foot three columns">© Clifford Robinson, 2018</div>
-      </footer>
+      
+        <div class="foot two columns offset-by-two"><a class="icon-github"  href="https://github.com/CliffRobinson"></a></div>
+        <div class="foot two columns"><a class="icon-linkedin-circled"      href="https://www.linkedin.com/in/clifford-robinson-39b24621"></a></div>
+        <div class="foot two columns"><a class="icon-mail"                  href="mailto:clifford.f.robinson@gmail.com"></a></div>
+        <div class="foot two columns">© Clifford Robinson, 2018</div>
+    </footer>
     
     <!-- End of container -->
   </div>
