added link to mineseeper on front page

--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
     <div class="row">
         <div class="illumination">
             <div class="illumination-inset u-pull-left">
-              <img class="u-full-width" src="./images/EDA-Logo.jpg" alt="EDA Logo, taken from https://github.com/dev-academy-programme. I'll take it down if you ask, don't sue me.">
+              <a href="./projects/minesweeper/index.html">
+                <img class="u-full-width" src="./images/EDA-Logo.jpg" alt="EDA Logo, taken from https://github.com/dev-academy-programme. I'll take it down if you ask, don't sue me.">
+              </a>
             </div>
             <p class="illumination-text">
-                Pretty soon I'll be posting my assignments from <a href="https://devacademy.co.nz/">Enspiral DevAcademy</a>, the school I'm learning development from. When I do, you'll find them here. 
+                I'm learning development from <a href="https://devacademy.co.nz/">Enspiral DevAcademy</a>, and my first project can be found <a href="./projects/minesweeper/index.html">here</a>.
             </p>
         </div>      
     </div>
