Altered stylesheet link

--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -4,8 +4,8 @@
     <link rel="icon" type="image/jpeg" href="./images/Willem-Dafoe-1.jpg">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-    <link rel="stylesheet" type="text/css" href="./styles/main.css">
-    <link href="./styles/styles.css"  type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./Styles/main.css">
+    <link href="./Styles/styles.css"  type="text/css" rel="stylesheet">
 
     <link rel="stylesheet" href="minesweeper.css">
     <script src="lib/tests.js"></script>
