changed title, thanx Leslie :-D

--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Title </title>
+    <title>MineSpider</title>
     <link rel="icon" type="image/jpeg" href="./images/Willem-Dafoe-1.jpg">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
