--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </a>
             </div>
             <p class="illumination-text">
-                I'm learning development from <a href="https://devacademy.co.nz/">Enspiral DevAcademy</a>, and my first project can be found <a href="./minesweeper/index.html">here</a>.
+                I'm learning development from <a href="https://devacademy.co.nz/">Enspiral DevAcademy</a>, and my first project can be found <a href="./EDA-projects/minesweeper/index.html">here</a>.
             </p>
         </div>      
     </div>
