links and header on eda-project index

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row">
         <div class="illumination">
             <div class="illumination-inset u-pull-left">
-              <a href="./projects/minesweeper/index.html">
+              <a href="./EDA-projects/index.html">
                 <img class="u-full-width" src="./images/EDA-Logo.jpg" alt="EDA Logo, taken from https://github.com/dev-academy-programme. I'll take it down if you ask, don't sue me.">
               </a>
             </div>
