edited button to match others, edited associated event listener, added better instructions and formatted them so board doesn't move

--- a/EDA-projects/minesweeper/index.html
+++ b/EDA-projects/minesweeper/index.html
@@ -40,7 +40,7 @@
         <div class="board"></div>
         <div class="restart invisible">
      
-        <button>Play Again?</button>
+        <a class="button four columns offset-by-four restartbutton">Play Again?</a>
         </div>
     </div>
 
