updated eda-p index to include links to caesar

--- a/EDA-projects/index.html
+++ b/EDA-projects/index.html
@@ -47,6 +47,25 @@
     <div class="row">
         <div class="illumination">
             <div class="illumination-inset u-pull-left">
+              <a href="./caesar/caesar.html">
+                <img class="u-full-width" src="./caesar/images/f25306239a7bc5ee5d1e20754575c325.jpg"  alt="Taken from https://i.pinimg.com/originals/f2/53/06/f25306239a7bc5ee5d1e20754575c325.jpg, will take down if requested, don't sue me.">
+              </a>
+            </div>
+            <p class="illumination-text">
+                One of my exercises was to make some code that decrypts the Caesar cipher, where letters in the alphabet are shifted a certain number of places. I was so pleased with my code I decided to make a website to host it, which can be found <a href="./caesar/caesar.html">here</a>. 
+            </p>
+
+            <p class="illumination-text">
+                Github link is <a href="">here</a>. 
+            </p>
+        </div>
+      </div>
+  
+      <hr>
+      <!-- Spare illuinated para for future projects 
+      <div class="row">
+        <div class="illumination">
+            <div class="illumination-inset u-pull-left">
               <a href="">
                 <img class="u-full-width" src="http://placekitten.com/g/120/120"  alt="">
               </a>
@@ -58,9 +77,7 @@
       </div>
   
       <hr>
-
-
-
+      -->
     <footer class="row">
       If you're seeing this, my script isn't working.
     </footer>
