updated player info bars, styled active player

--- a/Personal-Projects/NoughtsAndCrosses/Noughts.html
+++ b/Personal-Projects/NoughtsAndCrosses/Noughts.html
@@ -20,12 +20,12 @@
     </div>
 
     <div class="row">
-        <div class="player p1 six columns">
-            This is player 1's info
+        <div class="player six columns active" id="p1">
+            
         </div>
 
-        <div class="player p2 six columns">
-            This is player 2's info
+        <div class="player six columns" id="p2">
+            
         </div> 
 
     </div>
