implemented custom name and board, started on restart bar

--- a/Personal-Projects/NoughtsAndCrosses/Noughts.html
+++ b/Personal-Projects/NoughtsAndCrosses/Noughts.html
@@ -36,10 +36,10 @@
       </form>
       <div class="invisible" id="options2">
         What is your name? 
-        <input type="text" id="pname1">
+        <input type="text" id="pname1" value="A">
         <br>
         And your friend's name?
-        <input type="text" id="pname2">
+        <input type="text" id="pname2" value="B">
         <br>
         <a class="button" id="starter">Start the game!</a>
       </div>
@@ -60,6 +60,14 @@
         <div class="six columns offset-by-three" id="board">
             
         </div>
+    </div>
+
+    <div class="row" id="restart-row">
+      <div class="six columns offset-by-three" id="restart-buttons">
+        <a class="button six columns"> Play again?</a>
+        <a class="button six columns"> Change options?</a>
+        <a class="button six columns"> Hide this bar?</a>
+      </div>
     </div>
 
     <hr>
