updated interface for restarting noughts games, basic skeleton for countdown

--- a/Personal-Projects/NoughtsAndCrosses/Noughts.html
+++ b/Personal-Projects/NoughtsAndCrosses/Noughts.html
@@ -63,11 +63,12 @@
     </div>
 
     <div class="row" id="restart-row">
-      <div class="six columns offset-by-three" id="restart-buttons">
-        <a class="button six columns"> Play again?</a>
-        <a class="button six columns"> Change options?</a>
-        <a class="button six columns"> Hide this bar?</a>
+      <div class="six columns offset-by-three invisible" id="restart-buttons">
+        <a class="button six columns" id="play-again"> Play again?</a>
+        <a class="button six columns"id="change-options"> Change options?</a> 
+        
       </div>
+      <!-- <a class="button six columns" id="hider"> Hide this bar?</a>-->
     </div>
 
     <hr>
